--- a/package.json
+++ b/package.json
@@ -6,50 +6,50 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "archiver": "~0.21.0",
-    "body-parser": "~1.8.4",
-    "cheerio": "~0.20.0",
-    "compression": "~1.6.0",
-    "connect-redis": "~3.0.1",
-    "cookie-parser": "~1.3.5",
-    "crypto": "~0.0.3",
-    "debug": "~2.0.0",
-    "ejs": "~2.3.4",
-    "express": "~4.9.8",
-    "express-session": "~1.12.1",
-    "forever": "~0.15.1",
-    "formidable": "~1.0.17",
-    "fs": "~0.0.2",
-    "fundebug-nodejs": "~0.0.8",
-    "gm": "~1.21.1",
-    "iconv-lite": "~0.4.13",
-    "images": "~3.0.0",
-    "isarray": "~0.0.1",
-    "log4js": "~0.6.29",
-    "morgan": "~1.3.2",
-    "mysql": "~2.10.0",
-    "node-native-zip": "~1.1.0",
-    "node-schedule": "~1.1.0",
-    "nodegrass": "~0.0.3",
-    "nodemailer": "~3.1.8",
-    "path": "~0.12.7",
-    "q": "~1.4.1",
-    "qiniu": "~6.1.9",
-    "qr-image": "~3.1.0",
-    "queue-fun": "~0.3.2",
-    "redis": "~2.4.2",
-    "request": "~2.69.0",
-    "sequelize": "~3.17.1",
-    "serve-favicon": "~2.1.7",
-    "underscore": "~1.8.3",
-    "url": "~0.11.0",
-    "weinre": "~2.0.0-pre-I0Z7U9OV",
-    "when": "~3.7.7",
-    "xss": "~0.2.10"
+    "archiver": "0.21.0",
+    "body-parser": "1.8.4",
+    "cheerio": "0.20.0",
+    "compression": "1.6.0",
+    "connect-redis": "3.0.1",
+    "cookie-parser": "1.3.5",
+    "crypto": "0.0.3",
+    "debug": "2.0.0",
+    "ejs": "2.3.4",
+    "express": "4.9.8",
+    "express-session": "1.12.1",
+    "forever": "0.15.1",
+    "formidable": "1.0.17",
+    "fs": "0.0.2",
+    "fundebug-nodejs": "0.0.8",
+    "gm": "1.21.1",
+    "iconv-lite": "0.4.13",
+    "images": "3.0.0",
+    "isarray": "0.0.1",
+    "log4js": "0.6.29",
+    "morgan": "1.3.2",
+    "mysql": "2.10.0",
+    "node-native-zip": "1.1.0",
+    "node-schedule": "1.1.0",
+    "nodegrass": "0.0.3",
+    "nodemailer": "3.1.8",
+    "path": "0.12.7",
+    "q": "1.4.1",
+    "qiniu": "6.1.9",
+    "qr-image": "3.1.0",
+    "queue-fun": "0.3.2",
+    "redis": "2.4.2",
+    "request": "2.69.0",
+    "sequelize": "3.17.1",
+    "serve-favicon": "2.1.7",
+    "underscore": "1.8.3",
+    "url": "0.11.0",
+    "weinre": "2.0.0-pre-I0Z7U9OV",
+    "when": "3.7.7",
+    "xss": "0.2.10"
   },
   "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-jshint": "~0.11.2",
-    "grunt-contrib-uglify": "~0.9.1"
+    "grunt": "0.4.5",
+    "grunt-contrib-jshint": "0.11.2",
+    "grunt-contrib-uglify": "0.9.1"
   }
 }
